# arklint

./: .arklint.yml  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: arklint.yml  docs.yml  pr-description-check.yml  release.yml  tests.yml
docs/: build.py  template.html
docs/content/: ci.md  cli.md  contributing.md  diff.md  export.md  github-action.md  installation.md  languages.md  learn.md  mcp.md  overview.md  packs.md  quickstart.md  rules.md  visualize.md  watch.md
docs/site/: index.html  manifest.json
dotnet/: Program.cs  README.md  arklint.csproj
npm/: README.md  install.js  package.json  run.js
packs/: CONTRIBUTING.md  clean-arch.yml  code-hygiene.yml  django.yml  express.yml  fastapi.yml  flask.yml  nestjs.yml  nextjs.yml  registry.json  security.yml  spring.yml
src/arklint/: __main__.py  cli.py  config.py  engine.py  exporter.py  init_templates.py  learner.py  mcp_server.py  packs.py  reporter.py  scanner.py  visualize.py
src/arklint/parsers/: __init__.py  deps.py  imports.py  patterns.py
src/arklint/rules/: __init__.py  base.py  boundary.py  dependency.py  file_pattern.py  layer_boundary.py  pattern_ban.py
tests/: test_cli.py  test_config.py  test_export.py  test_github_annotations.py  test_learn.py  test_main.py  test_mcp_server.py  test_packs.py  test_reporter.py  test_scanner.py  test_visualize.py
tests/fixtures/clean_project/: requirements.txt
tests/fixtures/clean_project/routes/: health.py
tests/fixtures/clean_project/services/: health.py
tests/fixtures/messy_project/: requirements.txt
tests/fixtures/messy_project/routes/: orders.py  users.py
tests/fixtures/messy_project/services/: email.py
tests/test_parsers/: test_imports.py
tests/test_rules/: test_boundary.py  test_dependency.py  test_file_pattern.py  test_layer_boundary.py  test_pattern_ban.py
