[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Kaushik13k/arklint"
Issues = "https://github.com/Kaushik13k/arklint/issues"

[project]
name = "arklint"
version = "0.6.0"
description = "The architectural rulebook for your codebase. Prevention, not detection."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["architecture", "linting", "cli", "code-quality", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "pathspec>=0.12.0",
    "watchdog>=4.0.0",
]

[project.scripts]
arklint = "arklint.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11.0",
    "black>=25.0.0",
    "pre-commit>=3.0.0",
]
mcp = [
    "mcp>=1.0",
]
ai-anthropic = [
    "anthropic>=0.40.0",
]
ai-openai = [
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["F401", "F811", "F841"]  # fixtures intentionally have unused imports/vars

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
